@@ -2711,7 +2711,6 @@ function DatabaseBuilder(db) {
 	this.$repository = {};
 	this.$counter = 0;
 	this.$keys = [];
-	this.$cmd = null;
 }
 
 DatabaseBuilder.prototype.promise = promise;
@@ -2902,8 +2901,6 @@ DatabaseBuilder.prototype.join = function(field, name) {
 	if (join)
 		return join;
 
-	self.$cmd && self.$cmd.push({ type: 'join', arg: arguments });
-
 	var item = self.$join[key] = {};
 	item.field = field;
 	item.name = name;
@@ -2964,7 +2961,6 @@ DatabaseBuilder.prototype.filter = function(fn) {
 	if (self.$scope)
 		code = 'if(!$is){' + code + '}';
 
-	self.$cmd && self.$cmd.push({ type: 'fitler', arg: arguments });
 	self.$code.push(code);
 	!self.$scope && self.$code.push('if(!$is)return;');
 	self.$counter++;
@@ -2987,7 +2983,6 @@ DatabaseBuilder.prototype.contains = function(name) {
 	self.$code.push(code);
 	!self.$scope && self.$code.push('if(!$is)return;');
 	self.$counter++;
-	self.$cmd && self.$cmd.push({ type: 'contains', arg: arguments });
 	return self;
 };
 
@@ -2999,7 +2994,6 @@ DatabaseBuilder.prototype.empty = function(name) {
 	self.$code.push(code);
 	!self.$scope && self.$code.push('if(!$is)return;');
 	self.$counter++;
-	self.$cmd && self.$cmd.push({ type: 'empty', arg: arguments });
 	return self;
 };
 
@@ -3047,7 +3041,6 @@ DatabaseBuilder.prototype.where = function(name, operator, value) {
 	self.$keys && self.$keys.push(name);
 	self.$code.push(code.format(name, key, operator));
 	!self.$scope && self.$code.push('if(!$is)return;');
-	self.$cmd && self.$cmd.push({ type: 'where', arg: arguments });
 	return self;
 };
 
@@ -3065,7 +3058,6 @@ DatabaseBuilder.prototype.query = function(code) {
 	self.$code.push(code);
 	!self.$scope && self.$code.push('if(!$is)return;');
 	self.$counter++;
-	self.$cmd && self.$cmd.push({ type: 'query', arg: arguments });
 	return self;
 };
 
@@ -3087,7 +3079,6 @@ DatabaseBuilder.prototype.month = function(name, operator, value) {
 	self.$keys && self.$keys.push(name);
 	self.$code.push(code);
 	!self.$scope && self.$code.push('if(!$is)return;');
-	self.$cmd && self.$cmd.push({ type: 'month', arg: arguments });
 	return self;
 };
 
@@ -3109,7 +3100,6 @@ DatabaseBuilder.prototype.day = function(name, operator, value) {
 	self.$keys && self.$keys.push(name);
 	self.$code.push(code);
 	!self.$scope && self.$code.push('if(!$is)return;');
-	self.$cmd && self.$cmd.push({ type: 'day', arg: arguments });
 	return self;
 };
 
@@ -3132,7 +3122,48 @@ DatabaseBuilder.prototype.year = function(name, operator, value) {
 
 	self.$code.push(code);
 	!self.$scope && self.$code.push('if(!$is)return;');
-	self.$cmd && self.$cmd.push({ type: 'year', arg: arguments });
+	return self;
+};
+
+DatabaseBuilder.prototype.hour = function(name, operator, value) {
+	var self = this;
+	var key = 'dh' + (self.$counter++);
+
+	if (value === undefined) {
+		value = operator;
+		operator = '=';
+	}
+
+	self.$params[key] = value;
+
+	var code = compare_datetype('hour', name, key, operator);
+	if (self.$scope)
+		code = 'if(!$is){' + code + '}';
+
+	self.$keys && self.$keys.push(name);
+	self.$code.push(code);
+	!self.$scope && self.$code.push('if(!$is)return;');
+	return self;
+};
+
+DatabaseBuilder.prototype.minute = function(name, operator, value) {
+	var self = this;
+	var key = 'dh' + (self.$counter++);
+
+	if (value === undefined) {
+		value = operator;
+		operator = '=';
+	}
+
+	self.$params[key] = value;
+
+	var code = compare_datetype('minute', name, key, operator);
+	if (self.$scope)
+		code = 'if(!$is){' + code + '}';
+
+	self.$keys && self.$keys.push(name);
+	self.$code.push(code);
+	!self.$scope && self.$code.push('if(!$is)return;');
 	return self;
 };
 
@@ -3168,7 +3199,6 @@ DatabaseBuilder.prototype.like = DatabaseBuilder.prototype.search = function(nam
 	self.$keys && self.$keys.push(name);
 	self.$code.push(code.format(name, key));
 	!self.$scope && self.$code.push('if(!$is)return;');
-	self.$cmd && self.$cmd.push({ type: 'search', arg: arguments });
 	return self;
 };
 
@@ -3181,7 +3211,6 @@ DatabaseBuilder.prototype.regexp = function(name, value) {
 	self.$keys && self.$keys.push(name);
 	self.$code.push(code.format(name, value.toString()));
 	!self.$scope && self.$code.push('if(!$is)return;');
-	self.$cmd && self.$cmd.push({ type: 'regexp', arg: arguments });
 	return self;
 };
 
@@ -3212,7 +3241,6 @@ DatabaseBuilder.prototype.fulltext = function(name, value, weight) {
 		code = 'if(!$is){' + code + '}';
 	self.$code.push(code.format(name, key, count || 1));
 	!self.$scope && self.$code.push('if(!$is)return;');
-	self.$cmd && self.$cmd.push({ type: 'fulltext', arg: arguments });
 	return self;
 };
 
@@ -3319,7 +3347,6 @@ DatabaseBuilder.prototype.random = function() {
 DatabaseBuilder.prototype.sort = function(name, desc) {
 	var self = this;
 	self.$options.sort = { name: name, asc: desc ? false : true };
-	self.$cmd && self.$cmd.push({ type: 'sort', arg: arguments });
 	return self;
 };
 
@@ -3330,7 +3357,6 @@ DatabaseBuilder.prototype.repository = function(key, value) {
 	if (value === undefined)
 		return self.$repository[key];
 	self.$repository[key] = value;
-	self.$cmd && self.$cmd.push({ type: 'repository', arg: arguments });
 	return self;
 };
 
@@ -3355,7 +3381,6 @@ DatabaseBuilder.prototype.in = function(name, value) {
 		code = 'if(!$is){' + code + '}';
 	self.$code.push(code);
 	!self.$scope && self.$code.push('if(!$is)return;');
-	self.$cmd && self.$cmd.push({ type: 'in', arg: arguments });
 	return self;
 };
 
@@ -3369,7 +3394,6 @@ DatabaseBuilder.prototype.notin = function(name, value) {
 		code = 'if(!$is){' + code + '}';
 	self.$code.push(code);
 	!self.$scope && self.$code.push('if(!$is)return;');
-	self.$cmd && self.$cmd.push({ type: 'notin', arg: arguments });
 	return self;
 };
 
@@ -3385,28 +3409,24 @@ DatabaseBuilder.prototype.between = function(name, a, b) {
 	self.$params[keyb] = b;
 	self.$code.push(code);
 	!self.$scope && self.$code.push('if(!$is)return;');
-	self.$cmd && self.$cmd.push({ type: 'between', arg: arguments });
 	return self;
 };
 
 DatabaseBuilder.prototype.or = function() {
 	this.$code.push('$is=false;');
 	this.$scope = 1;
-	this.$cmd && this.$cmd.push({ type: 'or' });
 	return this;
 };
 
 DatabaseBuilder.prototype.end = function() {
 	this.$scope = 0;
 	this.$code.push('if(!$is)return;');
-	this.$cmd && this.$cmd.push({ type: 'end' });
 	return this;
 };
 
 DatabaseBuilder.prototype.and = function() {
 	this.$code.push('$is=false;');
 	this.$scope = 0;
-	this.$cmd && this.$cmd.push({ type: 'and' });
 	return this;
 };
 
@@ -3437,7 +3457,6 @@ DatabaseBuilder.prototype.fields = function() {
 		}
 		self.$keys && self.$keys.push(name);
 	}
-	self.$cmd && self.$cmd.push({ type: 'fields', arg: arguments });
 	return self;
 };
 
@@ -3460,7 +3479,6 @@ DatabaseBuilder.prototype.code = function(code) {
 	if (self.$keys)
 		self.$keys = null;
 
-	self.$cmd && self.$cmd.push({ type: 'code', arg: arguments });
 	return self;
 };
 
@@ -7296,6 +7314,12 @@ function compare_datetype(type, key, arg, operator) {
 			break;
 		case 'year':
 			type = 'getFullYear()';
+			break;
+		case 'hour':
+			type = 'getHour()';
+			break;
+		case 'minute':
+			type = 'getMinute()';
 			break;
 	}
 
